--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,3 +7,9 @@
 
 // Semantic
 @import "resources/assets/sass/semantic/semantic.scss";
+
+// Font Awesome
+@import "resources/assets/sass/fontawesome/font-awesome.scss";
+
+// custom
+@import "nav";
