1.修正Vuex 2.project左側menu改用vue component 3.project create不再使用重新導向、改用vuex重新抓取列表

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -37156,6 +37156,10 @@ html.ios body {
   margin-top: 80px !important;
 }
 
+.left-project-name {
+  color: #333333;
+}
+
 .right-icon {
   position: absolute;
   right: 1em;
