--- a/resources/assets/sass/nav.scss
+++ b/resources/assets/sass/nav.scss
@@ -13,6 +13,9 @@
     margin-top: 80px !important;
 }
 
+.left-project-name{
+    color: #333333;
+}
 // right menu
 .right-icon{
     position: absolute;
